# boki

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile
.github/workflows/: check.yaml  release.yaml
docs/: release-notes.md
docs/examples/01-books-journal/: README.md  books.boki
src/: ast.rs  common_errors.rs  compile.rs  contracts.rs  evaluate.rs  format.rs  input.rs  lex.rs  lexparse.rs  lib.rs  main.rs  output.rs  parsing.rs  tokens.rs  utils.rs
src/compile/: set_attribute.rs  transaction.rs
src/evaluate/: error.rs
src/format/: _ast.rs  input.boki  output.boki  parse.rs  write.rs
src/input/: block.rs  common.rs  compile.rs  lex.rs  parse.rs  parse_v2.rs  posting.rs  statement.rs  tests.rs  timestamp.rs  transaction.rs
src/input/compile/: ast.rs  set_attribute.rs  transaction.rs
src/input/contracts/: ast.rs  tokens.rs
src/input/lex/: amount.rs  basic.rs  core.rs  identifier.rs  timestamp.rs
src/input/parse/: core.rs  set_attribute.rs  syntax.rs  transaction.rs
src/input/parse_v2/: core.rs  (+4 more)
src/lex/: amount.rs  basic.rs  core.rs  error.rs  identifier.rs  timestamp.rs  whitespace.rs
src/lexparse/: contracts.rs  error.rs  lex.rs  parse.rs
src/parsing/: basic.rs  combinators.rs  core.rs  error.rs
tests/: test_docs_examples.rs  test_successful.rs
tests/cases/: 001-example.boki  001-example.input.rj  001-example.output.json  002-default-commodity.boki  002-default-commodity.output.json  002-multiple-transactions.output.json  002-multiple-transactions.rj  003-transaction-attributes.boki  003-transaction-attributes.output.json
(+19 files in other folders)
